update with find topics

--- a/keyword_extraction.ipynb
+++ b/keyword_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,26 +36,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words =\"Black-on-black ware is a 20th- and 21st-century pottery tradition developed by the Puebloan Native American ceramic artists in Northern New Mexico.\""
+    "words = \"\"\"I'm now going to look at the columns of the matrix. I'm going to look at this part and this part.\n",
+    "I'm going to say that the x part is really x times -- you see, I'm putting the two -- I'm kind of getting the two equations at once -- that part and then I have a y and in the first equation it's multiplying a minus one and in the second equation a two, and on the right-hand side, zero and three.\n",
+    "You see, the columns of the matrix, the columns of A are here and the right-hand side b is there.\n",
+    "And now what is the equation asking for? It's asking us to find -- somehow to combine that vector and this one in the right amounts to get that one. It's asking us to find the right linear combination -- this is called a linear combination.\n",
+    "And it's the most fundamental operation in the whole course. It's a linear combination of the columns. That's what we're seeing on the left side.\n",
+    "Again, I don't want to write down a big definition. You can see what it is. There's column one, there's column two. I multiply by some numbers and I add. That's a combination -- a linear combination and I want to make those numbers the right numbers to produce zero three.\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"Extract keywords from this text:\\n\\n\"\n",
+    "query = \"Extract keywords from this text: \"\n",
     "prompt_ = query + words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,43 +68,43 @@
     "  model=\"text-davinci-002\",\n",
     "  prompt=prompt_,\n",
     "  temperature=0.3,\n",
-    "  max_tokens=60,\n",
-    "  top_p=1.0,\n",
-    "  frequency_penalty=0.8,\n",
+    "  max_tokens=400,\n",
+    "  top_p=.98,\n",
+    "  frequency_penalty=0.7,\n",
     "  presence_penalty=0.0\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-5wepGqjl0Fr6gqFX0Uoq6CiG3xVkv at 0x7f8ef0b639b0> JSON: {\n",
+       "<OpenAIObject text_completion id=cmpl-5wgBRIznGnorfqaQnIc5YW2F1OZ2G at 0x7f8ef0b5efb0> JSON: {\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"finish_reason\": \"stop\",\n",
        "      \"index\": 0,\n",
        "      \"logprobs\": null,\n",
-       "      \"text\": \"\\n\\npottery, tradition, Puebloan Native American, ceramic artists, Northern New Mexico\"\n",
+       "      \"text\": \"\\n\\n-matrix\\n-columns\\n-right-hand side\\n-linear combination\"\n",
        "    }\n",
        "  ],\n",
-       "  \"created\": 1664661642,\n",
-       "  \"id\": \"cmpl-5wepGqjl0Fr6gqFX0Uoq6CiG3xVkv\",\n",
+       "  \"created\": 1664666861,\n",
+       "  \"id\": \"cmpl-5wgBRIznGnorfqaQnIc5YW2F1OZ2G\",\n",
        "  \"model\": \"text-davinci-002\",\n",
        "  \"object\": \"text_completion\",\n",
        "  \"usage\": {\n",
        "    \"completion_tokens\": 19,\n",
-       "    \"prompt_tokens\": 43,\n",
-       "    \"total_tokens\": 62\n",
+       "    \"prompt_tokens\": 280,\n",
+       "    \"total_tokens\": 299\n",
        "  }\n",
        "}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +124,10 @@
      "text": [
       "\n",
       "\n",
-      "pottery, tradition, Puebloan Native American, ceramic artists, Northern New Mexico\n"
+      "-matrix\n",
+      "-columns\n",
+      "-right-hand side\n",
+      "-linear combination\n"
      ]
     }
    ],
@@ -127,6 +135,71 @@
     "x = response\n",
     "text = x['choices'][0]['text']\n",
     "print(text)  # , everyone, and welcome to the first installment of the new opening"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_new = \"Find the topic:\"\n",
+    "prompt_ = query_new + words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response_new = openai.Completion.create(\n",
+    "  model=\"text-davinci-002\",\n",
+    "  prompt=prompt_,\n",
+    "  temperature=0.3,\n",
+    "  max_tokens=400,\n",
+    "  top_p=.98,\n",
+    "  frequency_penalty=0.7,\n",
+    "  presence_penalty=0.0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject text_completion id=cmpl-5wgHGt5U7sJC1wE4P2pbUmiKvb6os at 0x7f8ef0b7d110> JSON: {\n",
+       "  \"choices\": [\n",
+       "    {\n",
+       "      \"finish_reason\": \"stop\",\n",
+       "      \"index\": 0,\n",
+       "      \"logprobs\": null,\n",
+       "      \"text\": \"\\n\\nThe topic is solving linear equations using matrices.\"\n",
+       "    }\n",
+       "  ],\n",
+       "  \"created\": 1664667222,\n",
+       "  \"id\": \"cmpl-5wgHGt5U7sJC1wE4P2pbUmiKvb6os\",\n",
+       "  \"model\": \"text-davinci-002\",\n",
+       "  \"object\": \"text_completion\",\n",
+       "  \"usage\": {\n",
+       "    \"completion_tokens\": 12,\n",
+       "    \"prompt_tokens\": 277,\n",
+       "    \"total_tokens\": 289\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response_new"
    ]
   },
   {
