update with youtube

--- a/keyword_extraction.ipynb
+++ b/keyword_extraction.ipynb
@@ -17,6 +17,7 @@
     }
    ],
    "source": [
+    "# imports\n",
     "import os\n",
     "import openai\n",
     "from dotenv import load_dotenv\n",
@@ -207,7 +208,104 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_new = response_new\n",
+    "text = x_new['choices'][0]['text']\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YT public api: AIzaSyAr2qs8fzXhK8aQBikHqkJSpmX6gWkSw8o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# See instructions for running these code samples locally:\n",
+    "# https://developers.google.com/explorer-help/code-samples#python\n",
+    "\n",
+    "# import google_auth_oauthlib.flow\n",
+    "# import googleapiclient.discovery\n",
+    "# import googleapiclient.errors\n",
+    "\n",
+    "# scopes = [\"https://www.googleapis.com/auth/youtube.force-ssl\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def main():\n",
+    "#     # Disable OAuthlib's HTTPS verification when running locally.\n",
+    "#     # *DO NOT* leave this option enabled in production.\n",
+    "#     os.environ[\"OAUTHLIB_INSECURE_TRANSPORT\"] = \"1\"\n",
+    "\n",
+    "#     api_service_name = \"youtube\"\n",
+    "#     api_version = \"v3\"\n",
+    "#     client_secrets_file = \"YOUR_CLIENT_SECRET_FILE.json\"\n",
+    "\n",
+    "#     # Get credentials and create an API client\n",
+    "#     flow = google_auth_oauthlib.flow.InstalledAppFlow.from_client_secrets_file(\n",
+    "#         client_secrets_file, scopes)\n",
+    "#     credentials = flow.run_console()\n",
+    "#     youtube = googleapiclient.discovery.build(\n",
+    "#         api_service_name, api_version, credentials=credentials)\n",
+    "\n",
+    "#     request = youtube.search().list(\n",
+    "#         part=\"solving linear equations using matrices\",\n",
+    "#         maxResults=5,\n",
+    "#         order=\"viewCount\"\n",
+    "#     )\n",
+    "#     response = request.execute()\n",
+    "\n",
+    "#     print(response)\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from apiclient.discovery import build"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_key = 'AIzaSyAr2qs8fzXhK8aQBikHqkJSpmX6gWkSw8o'\n",
+    "#Initializing the API\n",
+    "youtube = build( 'youtube', 'V3', developerKey=api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Searching for query\n",
+    "\"Twenty One Pilots\" with decreasing order as viewcount and result as video type\n",
+    "results = voutube. search).list(q=\"Twenty One Pilots\", part=\"snippet\", type=\"video\":\n",
+    "order=\"viewCount\" ).execute( )\n",
+    "#variable results will return us with http obiect request"
+   ]
   }
  ],
  "metadata": {
