removed env variables

--- a/keyword_extraction.ipynb
+++ b/keyword_extraction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "True"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,15 +247,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YT public api: AIzaSyAr2qs8fzXhK8aQBikHqkJSpmX6gWkSw8o"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [],
@@ -268,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,23 +288,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api_key = 'AIzaSyAr2qs8fzXhK8aQBikHqkJSpmX6gWkSw8o'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'kind': 'youtube#searchListResponse', 'etag': 'YKumVuqIVujFgAIWlravcUFXJVw', 'nextPageToken': 'CAUQAA', 'regionCode': 'US', 'pageInfo': {'totalResults': 1000000, 'resultsPerPage': 5}, 'items': [{'kind': 'youtube#searchResult', 'etag': 'UE_sBngYOladmOLGPdmScJFhBUI', 'id': {'kind': 'youtube#video', 'videoId': 'pXRviuL6vMY'}, 'snippet': {'publishedAt': '2015-04-28T03:05:18Z', 'channelId': 'UClVrJwcIy7saPcGc1nct80A', 'title': 'twenty one pilots: Stressed Out [OFFICIAL VIDEO]', 'description': \"twenty one pilots' music video for 'Stressed Out' from the album, Blurryface - available now on Fueled By Ramen.\", 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/pXRviuL6vMY/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/pXRviuL6vMY/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/pXRviuL6vMY/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'Fueled By Ramen', 'liveBroadcastContent': 'none', 'publishTime': '2015-04-28T03:05:18Z'}}, {'kind': 'youtube#searchResult', 'etag': 'LoAcAdVYrcReYyj0gTR8Ruzu8os', 'id': {'kind': 'youtube#video', 'videoId': 'UprcpdwuwCg'}, 'snippet': {'publishedAt': '2016-06-21T22:25:16Z', 'channelId': 'UClVrJwcIy7saPcGc1nct80A', 'title': 'twenty one pilots: Heathens (from Suicide Squad: The Album) [OFFICIAL VIDEO]', 'description': \"twenty one pilots' music video for 'Heathens' from Suicide Squad: The Album available now on Atlantic Records. Watch ...\", 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/UprcpdwuwCg/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/UprcpdwuwCg/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/UprcpdwuwCg/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'Fueled By Ramen', 'liveBroadcastContent': 'none', 'publishTime': '2016-06-21T22:25:16Z'}}, {'kind': 'youtube#searchResult', 'etag': 'QZ-AcaRXMWMrNKEu8AwdA3duUgE', 'id': {'kind': 'youtube#video', 'videoId': 'Pw-0pbY9JeU'}, 'snippet': {'publishedAt': '2015-05-13T22:00:26Z', 'channelId': 'UCBQZwaNPFfJ1gZ1fLZpAEGw', 'title': 'twenty one pilots - Ride (Official Video)', 'description': 'The official video for twenty one pilots\\' \"Ride\" from the album \\'Blurryface\\' available now on Fueled By Ramen. Subscribe for more ...', 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/Pw-0pbY9JeU/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/Pw-0pbY9JeU/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/Pw-0pbY9JeU/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'twenty one pilots', 'liveBroadcastContent': 'none', 'publishTime': '2015-05-13T22:00:26Z'}}, {'kind': 'youtube#searchResult', 'etag': 'iYEBXKRl1grs3ls5qwamgdRfJxY', 'id': {'kind': 'youtube#video', 'videoId': 'eJnQBXmZ7Ek'}, 'snippet': {'publishedAt': '2019-01-23T02:49:28Z', 'channelId': 'UCBQZwaNPFfJ1gZ1fLZpAEGw', 'title': 'twenty one pilots - Chlorine (Official Video)', 'description': 'official video for \"Chlorine\" from the album \\'TRENCH\\' - available now on Fueled By Ramen. Subscribe for more official content ...', 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/eJnQBXmZ7Ek/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/eJnQBXmZ7Ek/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/eJnQBXmZ7Ek/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'twenty one pilots', 'liveBroadcastContent': 'none', 'publishTime': '2019-01-23T02:49:28Z'}}, {'kind': 'youtube#searchResult', 'etag': 'kTxF_YOegfy4gJaQ0MDJJx42UZk', 'id': {'kind': 'youtube#video', 'videoId': '0t2tjNqGyJI'}, 'snippet': {'publishedAt': '2016-02-22T13:00:00Z', 'channelId': 'UCa10nxShhzNrCE1o2ZOPztg', 'title': 'Twenty One Pilots - Stressed Out (Tomsize Remix)', 'description': \"twenty one pilots - Stressed Out (Tomsize Remix) Trap Nation's limited apparel: https://nations.io ...\", 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/0t2tjNqGyJI/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/0t2tjNqGyJI/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/0t2tjNqGyJI/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'Trap Nation', 'liveBroadcastContent': 'none', 'publishTime': '2016-02-22T13:00:00Z'}}]}\n"
+      "AIzaSyAr2qs8fzXhK8aQBikHqkJSpmX6gWkSw8o\n"
+     ]
+    }
+   ],
+   "source": [
+    "api_key = os.getenv('YOUTUBE_API_KEY')\n",
+    "print(api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'kind': 'youtube#searchListResponse', 'etag': 'yKkYpaQ0NuVej9SHg2GjLia0z1k', 'nextPageToken': 'CAUQAA', 'regionCode': 'US', 'pageInfo': {'totalResults': 1000000, 'resultsPerPage': 5}, 'items': [{'kind': 'youtube#searchResult', 'etag': 'UE_sBngYOladmOLGPdmScJFhBUI', 'id': {'kind': 'youtube#video', 'videoId': 'pXRviuL6vMY'}, 'snippet': {'publishedAt': '2015-04-28T03:05:18Z', 'channelId': 'UClVrJwcIy7saPcGc1nct80A', 'title': 'twenty one pilots: Stressed Out [OFFICIAL VIDEO]', 'description': \"twenty one pilots' music video for 'Stressed Out' from the album, Blurryface - available now on Fueled By Ramen.\", 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/pXRviuL6vMY/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/pXRviuL6vMY/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/pXRviuL6vMY/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'Fueled By Ramen', 'liveBroadcastContent': 'none', 'publishTime': '2015-04-28T03:05:18Z'}}, {'kind': 'youtube#searchResult', 'etag': 'LoAcAdVYrcReYyj0gTR8Ruzu8os', 'id': {'kind': 'youtube#video', 'videoId': 'UprcpdwuwCg'}, 'snippet': {'publishedAt': '2016-06-21T22:25:16Z', 'channelId': 'UClVrJwcIy7saPcGc1nct80A', 'title': 'twenty one pilots: Heathens (from Suicide Squad: The Album) [OFFICIAL VIDEO]', 'description': \"twenty one pilots' music video for 'Heathens' from Suicide Squad: The Album available now on Atlantic Records. Watch ...\", 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/UprcpdwuwCg/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/UprcpdwuwCg/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/UprcpdwuwCg/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'Fueled By Ramen', 'liveBroadcastContent': 'none', 'publishTime': '2016-06-21T22:25:16Z'}}, {'kind': 'youtube#searchResult', 'etag': 'QySM41xPuF1Bd9862l1jkzgGzKg', 'id': {'kind': 'youtube#video', 'videoId': 'fKopy74weus'}, 'snippet': {'publishedAt': '2017-05-03T02:00:00Z', 'channelId': 'UCpx_k19S2vUutWUUM9qmXEg', 'title': 'Imagine Dragons - Thunder', 'description': 'Get Origins, ft. Natural, Zero, Machine and Bad Liar, out now: http://smarturl.it/OriginsID Listen to \"Thunder,\" out now: ...', 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/fKopy74weus/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/fKopy74weus/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/fKopy74weus/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'ImagineDragonsVEVO', 'liveBroadcastContent': 'none', 'publishTime': '2017-05-03T02:00:00Z'}}, {'kind': 'youtube#searchResult', 'etag': 'QZ-AcaRXMWMrNKEu8AwdA3duUgE', 'id': {'kind': 'youtube#video', 'videoId': 'Pw-0pbY9JeU'}, 'snippet': {'publishedAt': '2015-05-13T22:00:26Z', 'channelId': 'UCBQZwaNPFfJ1gZ1fLZpAEGw', 'title': 'twenty one pilots - Ride (Official Video)', 'description': 'The official video for twenty one pilots\\' \"Ride\" from the album \\'Blurryface\\' available now on Fueled By Ramen. Subscribe for more ...', 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/Pw-0pbY9JeU/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/Pw-0pbY9JeU/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/Pw-0pbY9JeU/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'twenty one pilots', 'liveBroadcastContent': 'none', 'publishTime': '2015-05-13T22:00:26Z'}}, {'kind': 'youtube#searchResult', 'etag': 'iYEBXKRl1grs3ls5qwamgdRfJxY', 'id': {'kind': 'youtube#video', 'videoId': 'eJnQBXmZ7Ek'}, 'snippet': {'publishedAt': '2019-01-23T02:49:28Z', 'channelId': 'UCBQZwaNPFfJ1gZ1fLZpAEGw', 'title': 'twenty one pilots - Chlorine (Official Video)', 'description': 'official video for \"Chlorine\" from the album \\'TRENCH\\' - available now on Fueled By Ramen. Subscribe for more official content ...', 'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/eJnQBXmZ7Ek/default.jpg', 'width': 120, 'height': 90}, 'medium': {'url': 'https://i.ytimg.com/vi/eJnQBXmZ7Ek/mqdefault.jpg', 'width': 320, 'height': 180}, 'high': {'url': 'https://i.ytimg.com/vi/eJnQBXmZ7Ek/hqdefault.jpg', 'width': 480, 'height': 360}}, 'channelTitle': 'twenty one pilots', 'liveBroadcastContent': 'none', 'publishTime': '2019-01-23T02:49:28Z'}}]}\n"
      ]
     }
    ],
@@ -323,18 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyAr2qs8fzXhK8aQBikHqkJSpmX6gWkSw8o'\n",
     "#Initializing the API\n",
     "youtube = build( 'youtube', 'V3', developerKey=api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,14 +343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'kind': 'youtube#searchListResponse',\n",
-       " 'etag': 'RJXk9XoowAvuZtaGddgS3KC_RHQ',\n",
+       " 'etag': 'YKumVuqIVujFgAIWlravcUFXJVw',\n",
        " 'nextPageToken': 'CAUQAA',\n",
        " 'regionCode': 'US',\n",
        " 'pageInfo': {'totalResults': 1000000, 'resultsPerPage': 5},\n",
@@ -432,27 +431,27 @@
        "    'liveBroadcastContent': 'none',\n",
        "    'publishTime': '2019-01-23T02:49:28Z'}},\n",
        "  {'kind': 'youtube#searchResult',\n",
-       "   'etag': 'Zwlwrj7CtJWtd7-0D_CF77Subas',\n",
-       "   'id': {'kind': 'youtube#video', 'videoId': 'r00ikilDxW4'},\n",
-       "   'snippet': {'publishedAt': '2009-10-08T01:24:21Z',\n",
-       "    'channelId': 'UCqC_GY2ZiENFz2pwL0cSfAw',\n",
-       "    'title': 'Green Day - 21 Guns [Official Music Video]',\n",
-       "    'description': 'Watch the official music video for 21 Guns by Green Day from the album 21st Century Breakdown. Subscribe to the channel: ...',\n",
-       "    'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/r00ikilDxW4/default.jpg',\n",
+       "   'etag': 'kTxF_YOegfy4gJaQ0MDJJx42UZk',\n",
+       "   'id': {'kind': 'youtube#video', 'videoId': '0t2tjNqGyJI'},\n",
+       "   'snippet': {'publishedAt': '2016-02-22T13:00:00Z',\n",
+       "    'channelId': 'UCa10nxShhzNrCE1o2ZOPztg',\n",
+       "    'title': 'Twenty One Pilots - Stressed Out (Tomsize Remix)',\n",
+       "    'description': \"twenty one pilots - Stressed Out (Tomsize Remix) Trap Nation's limited apparel: https://nations.io ...\",\n",
+       "    'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/0t2tjNqGyJI/default.jpg',\n",
        "      'width': 120,\n",
        "      'height': 90},\n",
-       "     'medium': {'url': 'https://i.ytimg.com/vi/r00ikilDxW4/mqdefault.jpg',\n",
+       "     'medium': {'url': 'https://i.ytimg.com/vi/0t2tjNqGyJI/mqdefault.jpg',\n",
        "      'width': 320,\n",
        "      'height': 180},\n",
-       "     'high': {'url': 'https://i.ytimg.com/vi/r00ikilDxW4/hqdefault.jpg',\n",
+       "     'high': {'url': 'https://i.ytimg.com/vi/0t2tjNqGyJI/hqdefault.jpg',\n",
        "      'width': 480,\n",
        "      'height': 360}},\n",
-       "    'channelTitle': 'Green Day',\n",
+       "    'channelTitle': 'Trap Nation',\n",
        "    'liveBroadcastContent': 'none',\n",
-       "    'publishTime': '2009-10-08T01:24:21Z'}}]}"
+       "    'publishTime': '2016-02-22T13:00:00Z'}}]}"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,16 +462,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Green Day - 21 Guns [Official Music Video] 2009-10-08T01:24:21Z r00ikilDxW4\n",
       "twenty one pilots: Stressed Out [OFFICIAL VIDEO] 2015-04-28T03:05:18Z pXRviuL6vMY\n",
       "twenty one pilots - Ride (Official Video) 2015-05-13T22:00:26Z Pw-0pbY9JeU\n",
+      "Twenty One Pilots - Stressed Out (Tomsize Remix) 2016-02-22T13:00:00Z 0t2tjNqGyJI\n",
       "twenty one pilots: Heathens (from Suicide Squad: The Album) [OFFICIAL VIDEO] 2016-06-21T22:25:16Z UprcpdwuwCg\n",
       "twenty one pilots - Chlorine (Official Video) 2019-01-23T02:49:28Z eJnQBXmZ7Ek\n"
      ]
@@ -486,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -585,36 +584,36 @@
        "      <th>0</th>\n",
        "      <td>twenty one pilots: Stressed Out [OFFICIAL VIDEO]</td>\n",
        "      <td>https://www.youtube.com/watch?v=pXRviuL6vMY</td>\n",
-       "      <td>121847.042198</td>\n",
-       "      <td>2567453414</td>\n",
+       "      <td>121847.250302</td>\n",
+       "      <td>2567455416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>twenty one pilots: Heathens (from Suicide Squa...</td>\n",
        "      <td>https://www.youtube.com/watch?v=UprcpdwuwCg</td>\n",
-       "      <td>111409.859055</td>\n",
-       "      <td>1922115264</td>\n",
+       "      <td>111409.839707</td>\n",
+       "      <td>1922119801</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>twenty one pilots - Ride (Official Video)</td>\n",
        "      <td>https://www.youtube.com/watch?v=Pw-0pbY9JeU</td>\n",
-       "      <td>77424.090133</td>\n",
-       "      <td>1315111373</td>\n",
+       "      <td>77424.142701</td>\n",
+       "      <td>1315114390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>twenty one pilots - Chlorine (Official Video)</td>\n",
        "      <td>https://www.youtube.com/watch?v=eJnQBXmZ7Ek</td>\n",
-       "      <td>35804.050501</td>\n",
-       "      <td>481456906</td>\n",
+       "      <td>35804.092250</td>\n",
+       "      <td>481458200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Green Day - 21 Guns [Official Music Video]</td>\n",
-       "      <td>https://www.youtube.com/watch?v=r00ikilDxW4</td>\n",
-       "      <td>17578.452040</td>\n",
-       "      <td>448860808</td>\n",
+       "      <td>Twenty One Pilots - Stressed Out (Tomsize Remix)</td>\n",
+       "      <td>https://www.youtube.com/watch?v=0t2tjNqGyJI</td>\n",
+       "      <td>28553.631478</td>\n",
+       "      <td>347942989</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -626,17 +625,17 @@
        "1  twenty one pilots: Heathens (from Suicide Squa...   \n",
        "2          twenty one pilots - Ride (Official Video)   \n",
        "3      twenty one pilots - Chlorine (Official Video)   \n",
-       "4         Green Day - 21 Guns [Official Music Video]   \n",
+       "4   Twenty One Pilots - Stressed Out (Tomsize Remix)   \n",
        "\n",
        "                                     Video URL   Custom_Score       Views  \n",
-       "0  https://www.youtube.com/watch?v=pXRviuL6vMY  121847.042198  2567453414  \n",
-       "1  https://www.youtube.com/watch?v=UprcpdwuwCg  111409.859055  1922115264  \n",
-       "2  https://www.youtube.com/watch?v=Pw-0pbY9JeU   77424.090133  1315111373  \n",
-       "3  https://www.youtube.com/watch?v=eJnQBXmZ7Ek   35804.050501   481456906  \n",
-       "4  https://www.youtube.com/watch?v=r00ikilDxW4   17578.452040   448860808  "
+       "0  https://www.youtube.com/watch?v=pXRviuL6vMY  121847.250302  2567455416  \n",
+       "1  https://www.youtube.com/watch?v=UprcpdwuwCg  111409.839707  1922119801  \n",
+       "2  https://www.youtube.com/watch?v=Pw-0pbY9JeU   77424.142701  1315114390  \n",
+       "3  https://www.youtube.com/watch?v=eJnQBXmZ7Ek   35804.092250   481458200  \n",
+       "4  https://www.youtube.com/watch?v=0t2tjNqGyJI   28553.631478   347942989  "
       ]
      },
-     "execution_count": 165,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
