--- a/keyword_extraction.ipynb
+++ b/keyword_extraction.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-5wohQYZiG24h1pdc1AimJ3yuaWuGR at 0x7f7ad03c7cb0> JSON: {\n",
+       "<OpenAIObject text_completion id=cmpl-5wpaZQUYIO3DG0AaK0XxqEkWwLOUo at 0x7fe7d07359b0> JSON: {\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"finish_reason\": \"stop\",\n",
@@ -111,8 +111,8 @@
        "      \"text\": \"\\n\\n-matrix\\n-columns\\n-right-hand side\\n-linear combination\"\n",
        "    }\n",
        "  ],\n",
-       "  \"created\": 1664699596,\n",
-       "  \"id\": \"cmpl-5wohQYZiG24h1pdc1AimJ3yuaWuGR\",\n",
+       "  \"created\": 1664703015,\n",
+       "  \"id\": \"cmpl-5wpaZQUYIO3DG0AaK0XxqEkWwLOUo\",\n",
        "  \"model\": \"text-davinci-002\",\n",
        "  \"object\": \"text_completion\",\n",
        "  \"usage\": {\n",
@@ -123,7 +123,7 @@
        "}"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "'\\n\\n,matrix\\n,columns\\n,right,hand side\\n,linear combination'"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,13 +205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject text_completion id=cmpl-5wohS1HiWxr2WUec3EFPJR5lAQPrw at 0x7f7ad03a6890> JSON: {\n",
+       "<OpenAIObject text_completion id=cmpl-5wpacgrByw8v0ogCE7QfyRBpJ2gIR at 0x7fe7d0735cb0> JSON: {\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"finish_reason\": \"stop\",\n",
@@ -220,8 +220,8 @@
        "      \"text\": \"\\n\\nThe topic is solving linear equations using matrices.\"\n",
        "    }\n",
        "  ],\n",
-       "  \"created\": 1664699598,\n",
-       "  \"id\": \"cmpl-5wohS1HiWxr2WUec3EFPJR5lAQPrw\",\n",
+       "  \"created\": 1664703018,\n",
+       "  \"id\": \"cmpl-5wpacgrByw8v0ogCE7QfyRBpJ2gIR\",\n",
        "  \"model\": \"text-davinci-002\",\n",
        "  \"object\": \"text_completion\",\n",
        "  \"usage\": {\n",
@@ -232,7 +232,7 @@
        "}"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "'\\n\\nsolving linear equations using matrices.'"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,19 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import google_auth_oauthlib.flow\n",
     "import googleapiclient.discovery\n",
-    "import googleapiclient.errors"
+    "import googleapiclient.errors\n",
+    "from apiclient.discovery import build"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +503,7 @@
        "    'publishTime': '2018-02-18T17:00:06Z'}}]}"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
